# StudioExample

./: CMakeLists.txt  LICENSE.txt  README.md  build_docker_centos6.sh
StudioMayaNodes/: CMakeLists.txt
StudioMayaNodes/Studio/nodes/: CMakeLists.txt  PluginRegister.h  TypeIDs.h  UsdDrivenMeshExample.cpp  UsdDrivenMeshExample.h
StudioMayaNodes/Studio/plugin/: CMakeLists.txt  plugin.cpp
StudioSchemas/: CMakeLists.txt  StudioSchemasConfig.cmake.in  setup_docker_env.sh
StudioSchemas/Studio/: CMakeLists.txt  ModuleDeps.cpp  __init__.py  __init__.py.in  module.cpp  plugInfo.json  plugInfo.json.in  schema.usda.in
StudioTranslators/: CMakeLists.txt  README.md
StudioTranslators/translators/: CMakeLists.txt  UsdAnimatedPlane.cpp  UsdAnimatedPlane.h  plugInfo.json
cmake/: ALConfig.cmake
cmake/macros/: Private.cmake  Public.cmake
docker/: Dockerfile  build_studioexample.sh
example_data/: AnimatedPlaneScene.usda
